z-index fix

--- a/css/gv.css
+++ b/css/gv.css
@@ -466,6 +466,7 @@ textarea.is-text-area {
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
+    z-index: 10;
 }
 
 .chart_bar-rank {
